Changed mobile styles due to position fixed bug on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -259,12 +259,14 @@ img {
     width: 300px;
     padding-bottom: 2px;
     background: transparent;
-    border: transparent;
+    border: none;
     border-bottom: 1px solid white;
     color: white;
     text-align: center; }
     #form-section input[type="text"]::placeholder {
       color: white; }
+    #form-section input[type="text"]:focus {
+      color: none; }
   #form-section .icons-container {
     margin: 50px 0;
     display: flex;
@@ -393,18 +395,6 @@ input[type="submit"],
     #Slytherin header h1 {
       color: rgba(255, 255, 255, 0.6); }
 
-@media (max-width: 930px) {
-  #Hufflepuff {
-    background-position: 25%; } }
-
-@media (max-width: 725px) {
-  #Gryffindor {
-    background-position: 33%; }
-  #Ravenclaw {
-    background-position: 25%; }
-  #Slytherin {
-    background-position: 60%; } }
-
 .house-details {
   background: rgba(0, 0, 0, 0.1);
   width: 100%; }
@@ -432,6 +422,10 @@ input[type="submit"],
   background: rgba(0, 0, 0, 0.7);
   padding: 125px 0; }
 
+@media (max-width: 768px) {
+  .detail:nth-of-type(odd) {
+    background: black; } }
+
 .detail:nth-of-type(even) {
   background: rgba(0, 0, 0, 0.2);
   padding: 150px 0; }
@@ -451,6 +445,10 @@ input[type="submit"],
   top: -80px;
   border-width: 80px 0 0 100vw;
   border-color: transparent transparent transparent rgba(0, 0, 0, 0.73); }
+
+@media (max-width: 768px) {
+  .detail:nth-of-type(1)::before {
+    border-color: transparent transparent transparent black; } }
 
 .detail:nth-of-type(2)::before {
   top: 0;
@@ -477,6 +475,32 @@ input[type="submit"],
   .detail:nth-of-type(odd) h2,
   .detail:nth-of-type(odd) p {
     text-align: center; } }
+
+@media (max-width: 768px) {
+  #Gryffindor {
+    background: #ae0001; }
+    #Gryffindor header {
+      background: radial-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url(../assets/lion2.jpg); }
+  #Hufflepuff {
+    background: #ecb939; }
+    #Hufflepuff header {
+      background: radial-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url(../assets/badger1.jpg); }
+  #Ravenclaw {
+    background: #222f5b; }
+    #Ravenclaw header {
+      background: radial-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url(../assets/raven1.jpg); }
+  #Slytherin {
+    background: #2a623d; }
+    #Slytherin header {
+      background: radial-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../assets/snake2.jpg); }
+  #Gryffindor header,
+  #Hufflepuff header,
+  #Ravenclaw header,
+  #Slytherin header {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll; } }
 
 @media (max-width: 450px) {
   .house-details h2 {
